# GoodbyeDPI

./: .deepsource.toml  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE-getline.txt  LICENSE-windivert.txt  Makefile  README.md  README.ru.md  blackwhitelist.c  class.md  dnsredir.c  dnsredir.h  getline.h  goodbyedpi.c  goodbyedpi.exe.manifest  goodbyedpi.h  service.c  service.h  turkey.cmd
.github/ISSUE_TEMPLATE/: bug-report----------------------.md  bug.yml  config.yml  feature-request------------------------------------.md  feature.yml
.github/workflows/: build.yml  clang-format-check  clang-format-check.yml
DPI_Tray/: 0_russia_update_blacklist_file.cmd  1_russia_blacklist.cmd  1_russia_blacklist_dnsredir.cmd  2_any_country.cmd  2_any_country_dnsredir.cmd  config.json  russia-blacklist.txt  russia-youtube.txt  service_install_russia_blacklist.cmd  service_install_russia_blacklist_dnsredir.cmd  service_remove.cmd
DPI_Tray/_internal/: _asyncio.pyd  _bz2.pyd  _cffi_backend.cp38-win_amd64.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _ssl.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
DPI_Tray/_internal/PIL/: _imaging.cp38-win_amd64.pyd  _imagingcms.cp38-win_amd64.pyd  _imagingmath.cp38-win_amd64.pyd  _imagingtk.cp38-win_amd64.pyd  _webp.cp38-win_amd64.pyd
DPI_Tray/_internal/importlib_metadata-8.2.0.dist-info/: METADATA  RECORD
DPI_Tray/_internal/setuptools-65.5.1.dist-info/: METADATA  RECORD  WHEEL
DPI_Tray/_internal/wheel-0.38.4.dist-info/: RECORD
DPI_Tray/licenses/: LICENSE-getline.txt  LICENSE-uthash.txt
DPI_Tray/x86/: WinDivert32.sys
DPI_Tray/x86_64/: WinDivert64.sys
cmake/: FindWinDivert.cmake  Hardening.cmake  VersionFromGit.cmake  config.h.in  goodbyedpi-rc.rc.in
src/: Makefile  blackwhitelist.c  blackwhitelist.h  dnsredir.c  dnsredir.h  fakepackets.c  fakepackets.h  goodbyedpi-rc.rc  goodbyedpi.c  goodbyedpi.exe.manifest  goodbyedpi.h  service.c  tls.h  ttltrack.c  ttltrack.h
src/utils/: getline.c  repl_str.c  repl_str.h  uthash.h
src_Tray/: main.py  requirements.txt
